--- a/pom.xml
+++ b/pom.xml
@@ -68,9 +68,7 @@
 
         <release.version>0.1-SNAPSHOT</release.version>
 
-        <patch.version>${git.closest.tag.commit.count}</patch.version>
-
-        <full.version>${release.version}.${patch.version}</full.version>
+        <full.version>${release.version}</full.version>
 
         <compiler.version>3.7.0</compiler.version>
         <shade.version>3.1.0</shade.version>
