--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,10 @@
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
+	<repository>
+            <id>md_5-snapshots</id>
+	    <url>http://repo.md-5.net/content/repositories/snapshots/</url>
+	</repository>
         <repository>
             <id>sponge-repo</id>
             <url>https://repo.spongepowered.org/maven</url>
